--- a/WaveExpress_Ao/templates/ferry_system/reservation/reserve_ticket.html
+++ b/WaveExpress_Ao/templates/ferry_system/reservation/reserve_ticket.html
@@ -44,8 +44,25 @@
                             </label>
                         </div>
 
-                        <div class="d-grid gap-2">
-                            <button type="submit" class="btn btn-primary btn-lg">Continue to Payment</button>
+                        <div class="alert alert-info">
+                            <h5>Reservation Options:</h5>
+                            <p>You can reserve now and pay later, but payment must be completed within 24 hours or your reservation will be automatically cancelled.</p>
+                        </div>
+
+                        <div class="row">
+                            <div class="col-md-6 mb-3">
+                                <button type="submit" name="reservation_type" value="pay_now" class="btn btn-primary btn-lg w-100">
+                                    <i class="bi bi-credit-card me-2"></i>Reserve & Pay Now
+                                </button>
+                            </div>
+                            <div class="col-md-6 mb-3">
+                                <button type="submit" name="reservation_type" value="pay_later" class="btn btn-outline-primary btn-lg w-100">
+                                    <i class="bi bi-clock-history me-2"></i>Reserve & Pay Later
+                                </button>
+                            </div>
+                        </div>
+                        
+                        <div class="d-grid">
                             <a href="{% url 'ferry_system:schedule_list' %}" class="btn btn-secondary">Cancel</a>
                         </div>
                     </form>
